--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
       Coded by <a href="#">Rahul Chandankeri</a>
     </footer>
 
-    <script src="main-optima.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
