--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 Tip Amount
                 <p class="result-caption-2">/ Person</p>
               </span>
-              <h2 id="total-tip">$4.27</h2>
+              <h2 id="total-tip">₹4.27</h2>
             </div>
 
             <div class="total margin-top">
@@ -107,7 +107,7 @@
                 Total
                 <p class="result-caption-2">/ Person</p>
               </span>
-              <h2 id="total-amount">$32.7</h2>
+              <h2 id="total-amount">₹32.7</h2>
             </div>
             <button class="Reset-btn disable-btn">Reset</button>
           </div>
